Updated the CSS to fix low-res devices cutting off the skills section.

--- a/app/css/components/skill.less
+++ b/app/css/components/skill.less
@@ -26,7 +26,7 @@
 	transition: flex 300ms ease;
 
 	&.active{
-		flex: 1 0 100%;
+		flex: 1 0 auto;
 		cursor: initial;
 	}
 
