--- a/app/css/main.less
+++ b/app/css/main.less
@@ -90,6 +90,8 @@ h1,h2,h3,h4,h5{
 
 	flex: 1 0 100%;
 	min-height: 20rem;
+
+	overflow-y: auto;
 }
 @media @landscape-lt-md{
 	.skills-container{
